--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+
+
 <android.support.design.widget.CoordinatorLayout
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
@@ -39,16 +41,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!--<TextView-->
-                <!--android:fontFamily="sans-serif-black"-->
-                <!--android:textStyle="bold"-->
-                <!--android:textSize="30dp"-->
-                <!--android:layout_marginBottom="30dp"-->
-                <!--android:textColor="@color/white"-->
-                <!--android:text="Food Recipe"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content" />-->
 
+            <LinearLayout
+
+                android:id="@+id/search_layout"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
             <TextView
                 android:fontFamily="sans-serif-light"
                 android:layout_marginBottom="20dp"
@@ -84,6 +85,70 @@
             </android.support.v7.widget.SearchView>
 
             </android.support.v7.widget.CardView>
+
+            </LinearLayout>
+
+
+
+
+            <LinearLayout
+                android:visibility="gone"
+                android:id="@+id/about_layout"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:textStyle="bold"
+                    android:layout_marginBottom="20dp"
+                    android:textSize="22dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/about"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:fontFamily="sans-serif-light"
+                    android:layout_marginBottom="20dp"
+                    android:textSize="22dp"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/app_about"
+                    android:textColor="@color/white"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+                <android.support.v7.widget.CardView
+                    app:cardCornerRadius="20dp"
+                    android:minWidth="200dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <Button
+
+                        android:minWidth="200dp"
+                        android:goIcon="@drawable/black_shirt_male"
+                        android:id="@+id/visitEdamam"
+                        android:focusableInTouchMode="true"
+                        android:layout_width="wrap_content"
+                        android:textColor="@color/colorAccent"
+                        android:text="visit edamam"
+                        android:background="@color/white"
+                        android:layout_height="wrap_content">
+
+
+                    </Button>
+
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
 
 
         </LinearLayout>
