--- a/app/src/main/res/layout/detail_nested.xml
+++ b/app/src/main/res/layout/detail_nested.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -14,160 +12,198 @@
     </data>
 
 
-<android.support.v4.widget.NestedScrollView
+    <android.support.v4.widget.NestedScrollView
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    tools:showIn="@layout/activity_recipe_detail"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-
-    >
-    <LinearLayout
-        android:background="@color/colorPrimary"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:showIn="@layout/activity_recipe_detail"
+
+        >
 
         <LinearLayout
-            android:layout_marginBottom="3dp"
-            android:background="@color/white"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <TextView
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:orientation="vertical">
 
-            style="@style/HealthAndIngredients"
-            android:text="Health Label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:background="@color/white"
+                android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="15dp"
-        android:id="@+id/healthLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/ingredients_list"
+                <TextView
 
-        />
+                    style="@style/HealthAndIngredients"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Health Label" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/healthLabel"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="15dp"
+                    tools:listitem="@layout/ingredients_list"
+
+                    />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3dp"
+                android:background="@color/white"
+                android:orientation="vertical">
+
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp">
+
+                    <TextView
+                        android:id="@+id/recipeCalories"
+                        style="@style/MiddleTopItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="5000"
+                        app:layout_constraintEnd_toEndOf="@+id/recipeEnergy"
+                        app:layout_constraintStart_toStartOf="@+id/recipeEnergy"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:setcalories="@{Secondrecipe}" />
+
+
+                    <TextView
+                        android:id="@+id/recipeEnergy"
+                        style="@style/MiddleBottomItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Energy in Kcal"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/recipeCalories" />
+
+                    <TextView
+                        android:id="@+id/recipeTimeTocook"
+                        style="@style/MiddleBottomItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Time in Min"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/recipeTime" />
+
+                    <TextView
+                        android:id="@+id/recipeTime"
+                        style="@style/MiddleTopItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="4min"
+                        app:layout_constraintEnd_toEndOf="@+id/recipeTimeTocook"
+                        app:layout_constraintStart_toStartOf="@+id/recipeTimeTocook"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:setRecipeTime="@{Secondrecipe}" />
+
+                    <TextView
+                        android:id="@+id/totalWeight"
+                        style="@style/MiddleTopItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="30"
+                        app:layout_constraintEnd_toEndOf="@+id/totalWeightIngram"
+                        app:layout_constraintStart_toStartOf="@+id/totalWeightIngram"
+                        app:layout_constraintTop_toTopOf="parent"
+
+                        app:setWeight="@{Secondrecipe}" />
+
+
+                    <TextView
+                        android:id="@+id/totalWeightIngram"
+                        style="@style/MiddleBottomItem"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total Weight"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/totalWeight" />
+
+
+                </android.support.constraint.ConstraintLayout>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:paddingTop="10dp">
+
+
+                <TextView
+                    style="@style/HealthAndIngredients"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Ingredients" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/ingridientsRecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="15dp"
+                    tools:listitem="@layout/ingredients_list"
+
+                    />
+
+
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                    <android.support.v7.widget.CardView
+                        app:layout_constraintTop_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:cardCornerRadius="20dp"
+                        android:minWidth="200dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/viewSource"
+                        android:minWidth="200dp"
+                        android:background="@color/colorAccent"
+                        android:textColor="@color/white"
+                        android:text="visit source"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    </android.support.v7.widget.CardView>
+
+
+                </android.support.constraint.ConstraintLayout>
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
-    <LinearLayout
-        android:layout_marginBottom="3dp"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp">
-
-            <TextView
-                android:id="@+id/recipeCalories"
-                style="@style/MiddleTopItem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="5000"
-                app:setcalories="@{Secondrecipe}"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/recipeEnergy"
-                app:layout_constraintStart_toStartOf="@+id/recipeEnergy"
-                 />
-
-
-            <TextView
-                style="@style/MiddleBottomItem"
-                android:id="@+id/recipeEnergy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Energy in Kcal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recipeCalories" />
-
-            <TextView
-                style="@style/MiddleBottomItem"
-                android:id="@+id/recipeTimeTocook"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Time in Min"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/recipeTime" />
-
-            <TextView
-                app:setRecipeTime="@{Secondrecipe}"
-                android:id="@+id/recipeTime"
-                style="@style/MiddleTopItem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4min"
-                app:layout_constraintEnd_toEndOf="@+id/recipeTimeTocook"
-                app:layout_constraintStart_toStartOf="@+id/recipeTimeTocook"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                app:setWeight="@{Secondrecipe}"
-                app:layout_constraintEnd_toEndOf="@+id/totalWeightIngram"
-                app:layout_constraintStart_toStartOf="@+id/totalWeightIngram"
-                android:id="@+id/totalWeight"
-                style="@style/MiddleTopItem"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="30"
-
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <TextView
-                style="@style/MiddleBottomItem"
-                android:id="@+id/totalWeightIngram"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Total Weight"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/totalWeight" />
-
-
-        </android.support.constraint.ConstraintLayout>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:paddingTop="10dp"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-        <TextView
-            android:text="Ingredients"
-            style="@style/HealthAndIngredients"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <android.support.v7.widget.RecyclerView
-         android:layout_marginStart="20dp"
-            android:layout_marginEnd="15dp"
-        android:id="@+id/ingridientsRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:listitem="@layout/ingredients_list"
-
-        />
-
-    </LinearLayout>
-
-    </LinearLayout>
-
-</android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
 </layout>
