--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -2,184 +2,180 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
-
-<android.support.design.widget.CoordinatorLayout
-    android:id="@+id/coordinatorLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-
-    <!-- Page Content -->
-    <RelativeLayout
-        android:id="@+id/main_content"
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <android.support.v4.widget.DrawerLayout
+            android:id="@+id/drawer_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:background="@color/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true">
 
-
-
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:background="@drawable/background"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-            <LinearLayout
-
-                android:id="@+id/search_layout"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical"
+            <!-- Page Content -->
+            <RelativeLayout
+                android:id="@+id/main_content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-            <TextView
-                android:fontFamily="sans-serif-light"
-                android:layout_marginBottom="20dp"
-                android:textSize="22dp"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_marginStart="10dp"
-                android:text="@string/app_desc"
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:background="@color/colorPrimary"
+                    android:minHeight="?attr/actionBarSize"
+                    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 
-            <android.support.v7.widget.CardView
-                app:cardCornerRadius="20dp"
-
-                android:minWidth="300dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            <android.support.v7.widget.SearchView
-                android:minWidth="300dp"
-                android:goIcon="@drawable/black_shirt_male"
-                android:id="@+id/searchView"
-                android:focusableInTouchMode="true"
-                app:goIcon="@drawable/ic_youtube_searched_for_black_24dp"
-                android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="?attr/actionBarSize"
+                    android:background="@drawable/background"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
 
-                android:background="@color/white"
-                android:layout_height="wrap_content">
+                    <LinearLayout
+
+                        android:id="@+id/search_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:fontFamily="sans-serif-light"
+                            android:gravity="center"
+                            android:text="@string/app_desc"
+                            android:textColor="@color/white"
+                            android:textSize="22dp" />
 
 
-            </android.support.v7.widget.SearchView>
+                        <android.support.v7.widget.CardView
+                            android:layout_width="wrap_content"
 
-            </android.support.v7.widget.CardView>
+                            android:layout_height="wrap_content"
+                            android:minWidth="300dp"
+                            app:cardCornerRadius="20dp">
 
-            </LinearLayout>
+                            <android.support.v7.widget.SearchView
+                                android:id="@+id/searchView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@color/white"
+                                android:focusableInTouchMode="true"
+                                android:goIcon="@drawable/black_shirt_male"
 
 
+                                android:minWidth="300dp"
+                                app:goIcon="@drawable/ic_youtube_searched_for_black_24dp">
 
 
-            <LinearLayout
-                android:visibility="gone"
-                android:id="@+id/about_layout"
-                android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="vertical"
+                            </android.support.v7.widget.SearchView>
+
+                        </android.support.v7.widget.CardView>
+
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:id="@+id/about_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:fontFamily="sans-serif-smallcaps"
+                            android:gravity="center"
+                            android:text="@string/about"
+                            android:textColor="@color/white"
+                            android:textSize="22dp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:fontFamily="sans-serif-light"
+                            android:gravity="center"
+                            android:text="@string/app_about"
+                            android:textColor="@color/white"
+                            android:textSize="22dp" />
+
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:minWidth="200dp"
+                            app:cardCornerRadius="20dp">
+
+                            <Button
+
+                                android:id="@+id/visitEdamam"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@color/white"
+                                android:focusableInTouchMode="true"
+                                android:goIcon="@drawable/black_shirt_male"
+                                android:minWidth="200dp"
+                                android:text="visit edamam"
+                                android:textColor="@color/colorAccent">
+
+
+                            </Button>
+
+                        </android.support.v7.widget.CardView>
+
+                    </LinearLayout>
+
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
+            <!-- Navigation View -->
+            <android.support.design.widget.NavigationView
+
+                android:id="@+id/nav_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_gravity="start"
+                app:headerLayout="@layout/header"
+                app:itemIconTint="#8C000000"
+                app:itemTextColor="#E6000000"
+                app:menu="@menu/menu_items_only" />
 
-                <TextView
-                    android:fontFamily="sans-serif-smallcaps"
-                    android:textStyle="bold"
-                    android:layout_marginBottom="20dp"
-                    android:textSize="22dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:text="@string/about"
-                    android:textColor="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:fontFamily="sans-serif-light"
-                    android:layout_marginBottom="20dp"
-                    android:textSize="22dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_marginStart="10dp"
-                    android:text="@string/app_about"
-                    android:textColor="@color/white"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-
-                <android.support.v7.widget.CardView
-                    app:cardCornerRadius="20dp"
-                    android:minWidth="200dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <Button
-
-                        android:minWidth="200dp"
-                        android:goIcon="@drawable/black_shirt_male"
-                        android:id="@+id/visitEdamam"
-                        android:focusableInTouchMode="true"
-                        android:layout_width="wrap_content"
-                        android:textColor="@color/colorAccent"
-                        android:text="visit edamam"
-                        android:background="@color/white"
-                        android:layout_height="wrap_content">
-
-
-                    </Button>
-
-                </android.support.v7.widget.CardView>
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-
-
-    </RelativeLayout>
-
-    <!-- Navigation View -->
-    <android.support.design.widget.NavigationView
-
-        android:id="@+id/nav_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/header"
-        app:itemIconTint="#8C000000"
-        app:itemTextColor="#E6000000"
-        app:menu="@menu/menu_items_only"/>
-
-    <!-- Guidelines -->
-    <!--  itemIconTint : Applies Color to the Icons of the Navigation Menu
+            <!-- Guidelines -->
+            <!--  itemIconTint : Applies Color to the Icons of the Navigation Menu
                     Value (Grey - 54% #000000)-->
 
-    <!--  itemTextColor : Applies Color to the Text in the Navigation Menu
+            <!--  itemTextColor : Applies Color to the Text in the Navigation Menu
                     Value (Blackish - 87% #000000 )-->
 
-</android.support.v4.widget.DrawerLayout>
+        </android.support.v4.widget.DrawerLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
 
 </layout>
