--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,6 @@
         >
 
 <android.support.constraint.ConstraintLayout
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -41,7 +40,47 @@
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
     </android.support.v7.widget.Toolbar>
 
+
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/errorLayout"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_marginTop="?actionBarSize"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+            <TextView
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
+                android:text="@string/errorLoadMessage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        <android.support.v7.widget.CardView
+            app:cardCornerRadius="7dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/errorLoadingRetry"
+            android:background="@color/colorAccent"
+            android:text="retry"
+            android:textColor="@android:color/white"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        </android.support.v7.widget.CardView>
+
+
+    </LinearLayout>
+
+
     <com.facebook.shimmer.ShimmerFrameLayout
+
         shimmer_duration="500"
         android:orientation="vertical"
         android:layout_marginTop="?attr/actionBarSize"
